# Movie-Downloader

./: .gitignore  README.md  pyproject.toml
src/ytdlpcli/: cli.py  config.py  exceptions.py  formats.py  job_manager.py  runner.py  ui.py
tests/: test_formats.py  test_job_manager.py  test_runner.py  test_ui.py
